# docking-sim

./: .gitignore  LICENSE  README.md  align.rviz  autoware.rviz  format.sh  gui.sh  run_keyop.sh
.catkin_tools/profiles/default/: devel_collisions.txt
install/: .rosinstall  local_setup.sh  setup.sh
install/include/hms_client/: hms_msg.h  ping_pong.h  ping_pongRequest.h  ping_pongResponse.h
install/include/state_machine/: StateIn.h  StateOut.h
install/lib/apriltag_ros/: apriltag_ros_continuous_node  apriltag_ros_single_image_client_node  apriltag_ros_single_image_server_node
install/lib/pkgconfig/: ackermann_drive_teleop.pc  align_description.pc  align_gazebo.pc  apriltag_ros.pc  docking_verification.pc  hms_client.pc  obstacle_2d.pc  phz.pc  pod_localizer.pc  state_machine.pc  velodyne_description.pc  velodyne_gazebo_plugins.pc
install/share/align_gazebo/: package.xml
install/share/pod_localizer/: package.xml
install/share/pod_localizer/cmake/: pod_localizerConfig.cmake
logs/align_navigation/: build.cmake.000.log.stderr
logs/apriltag_ros/: build.make.000.log.stderr  build.make.001.log.stderr
logs/hms_client/: build.cmake.000.log.stderr
logs/obstacle_2d/: build.cmake.000.log.stderr
src/align_2dnav/: CMakeLists.txt  package.xml
src/align_2dnav/include/: goal_pub.h
src/align_2dnav/launch/: move_base.launch
src/align_2dnav/src/: goal_pub.cpp
src/align_description/: CMakeLists.txt  package.xml
src/align_description/launch/: align_rviz.launch
src/align_description/rviz/: align.rviz  autoware_align.rviz  hardware.rviz
src/align_description/urdf/: align.urdf.xacro
src/align_gazebo/: CMakeLists.txt  package.xml
src/align_gazebo/config/: ctrlr_params.yaml  joint_ctrlr_params.yaml
src/align_gazebo/launch/: align copy.launch  align.launch  autoware.launch  copy.launch  goal_pub.launch  goal_pub_autoware.launch  rerun_acker.launch  respawn_pod.launch  short.launch  waypoint_pub.launch
src/align_gazebo/models/Pod/: model.sdf
src/align_gazebo/models/pod/: model.config  model.sdf
src/align_gazebo/models/pod_tag/: model.sdf
src/align_gazebo/models/pod_tag/Tag1/: model.sdf
src/align_gazebo/models_/Pod/: model.config  model.sdf
src/align_gazebo/models_/pod/: pod_f.dae
src/align_gazebo/models_/pod_tag/: model.sdf
src/align_gazebo/models_/pod_tag/Tag1/materials/scripts/: Tag1.material
src/align_gazebo/models_/pod_tag/Tag2/materials/scripts/: Tag2.material
src/align_gazebo/models_/tag_table/: model.config  model.sdf
src/align_gazebo/scripts/: ackermann_drive_to_cmd_vel.py  bezier.py  bezier_node.py  c.npy  cmd_vel_to_ackermann_drive.py  common.py  common_pv.py  docking_locator.py  dubins_test.py  frames.gv  position_verification.py  pure_pursuit.py  retracer.py  tf_broadcaster.py  tf_broadcaster_autoware.py  viz.py  w.npy  waypoint_publisher.py
src/align_gazebo/src/: goal_pub.cpp  goal_pub.h  odom_transformation_node.cpp
src/align_gazebo/worlds/: pod.world
src/align_navigation/: CMakeLists.txt  dubins_planner_plugin.xml  package.xml  reeds_shepp_planner_plugin.xml
src/align_navigation/config/: TebLocalPlannerReconfigure.cfg  costmap_common.yaml  teb_local_planner_params.yaml
src/align_navigation/config/try/: costmap_common_params.yaml  local_costmap_params.yaml  teb_local_planner_params.yaml  teb_local_planner_params_autoware_test.yaml  teb_local_planner_params_autoware_test2.yaml
src/align_navigation/include/dubins_planner/: dubins.h  global_dubins.h
src/align_navigation/include/reeds_shepp_planner/: global_reeds_shepp.h  reeds_shepp.h
src/align_navigation/launch/: mapless_move_base.launch  move_base.launch  navigation_stack.launch
src/align_navigation/maps/: map.yaml
src/align_navigation/scripts/: approach_navigation.py  goal_publisher.py  p2p.py  test.py  undocking.py  utils.py
src/align_navigation/scripts/PodLocationServer/: DropoffPodLoc.json  PickupPodLoc.json  PodServer.py
src/align_navigation/src/: dubins.cpp  global_dubins.cpp  global_reeds_shepp.cpp  goal_publisher.py  out  reeds_shepp.cpp  test_dubins.cpp  test_reeds_shepp.cpp
src/align_relative_localization/pod_localizer/: CMakeLists.txt  package.xml
src/align_relative_localization/pod_localizer/config/: robot_ekf.yaml  settings.yaml  tags.yaml
src/align_relative_localization/pod_localizer/include/: april_tag_goal_pub.h  goal_pub.h
src/align_relative_localization/pod_localizer/launch/: continuous_detection.launch  ekl_launch.launch  goal_pub.launch  goal_pub_autoware.launch  goal_pub_hardware.launch  hardware.launch
src/align_relative_localization/pod_localizer/scripts/: ost.yaml  yamltocaminfo.py
src/align_relative_localization/pod_localizer/src/: april_tag_goal_pub.cpp  goal_pub.cpp
src/april_tag_pkg/motion_decoder/: CMakeLists.txt  package.xml
src/docking_verification/: CMakeLists.txt
src/docking_verification/src/: docking_verification.py
src/gui/: main_gui.py
src/hms_client/: CMakeLists.txt  package.xml
src/hms_client/config/: settings.yaml
src/hms_client/launch/: hms_launch.launch
src/hms_client/src/: hms_client.cpp  scan_dummy.py
src/hms_client/srv/: ping_pong.srv
src/obstacle_2d/: CMakeLists.txt  package.xml
src/obstacle_2d/src/: obstacle_2d.cpp
src/obstacle_3d/: CMakeLists.txt  package.xml
src/obstacle_3d/scripts/: lidar_downsampling.py
src/obstacle_3d/src/: obstacle_3d.cpp
src/phz/: CMakeLists.txt  README.md  package.xml
src/phz/config/: pod_locations.yaml
src/phz/launch/: phz.launch
src/phz/src/: groundtruth_publisher.cpp  identify_phz.cpp  viz.cpp  waypoint_publisher.cpp
src/state_machine/: CMakeLists.txt  package.xml  unit_tests.txt
src/state_machine/launch/: StateMachine.launch
src/state_machine/msg/: StateIn.msg  StateOut.msg
src/state_machine/src/: StateMachineMsgPublisher.cpp  main_gui.py  state_machine.cpp  state_machine_node.cpp
vehicle_gazebo_simulation_launcher/lib/pkgconfig/: vehicle_gazebo_simulation_launcher.pc
vehicle_gazebo_simulation_launcher/share/vehicle_gazebo_simulation_launcher/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
(+120 files in other folders)
