<?xml version="1.0"?>
<package>
  <name>align_2dnav</name>
  <version>0.0.0</version>
  <description>The pixbot package</description>
  <maintainer email="sachit@cmu.edu">Sachit Mahajan</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>move_base</build_depend>
  <run_depend>move_base</run_depend>
  <export>
  </export>
</package>
