<?xml version="1.0"?>
<package>
  <name>align_description</name>
  <version>0.1.0</version>
  <description>Simuation for pixbot ackermann steering</description>
  <maintainer email="sachit@cmu.edu">Sachit Mahajan</maintainer>
  <license>MIT</license>
  <author email="sachit@cmu.edu">Sachit</author>
  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>xacro</run_depend>
  <export>
    <architecture_independent/>
  </export>
</package>
